# nautilus-templates

./: README.md
C/: CMakeLists.txt  main.c
C++/: CMakeLists.txt  main.cpp
C/vscode/: launch.json  tasks.json
Java/: build.gradle  makefile
Latex/: main.tex  makefile
Linux/: bash.sh
Python/: environment.yml  makefile
